tests/toylang/neg/000941_mutation.toylang
program a = { if a sleep sleep; } .
